# imo-math-agent

./: .gitignore  README.md  blog-draft.md  example_problem.txt  main.py  problem.txt  pyproject.toml
solutions/: imo01.md
src/imo_math_agent/: __init__.py  agent.py  cli.py  config.py  prompting.py  types.py  verification.py
src/imo_math_agent/backends/: cohere.py
src/math_agent/: agent.py  cli.py  config.py  prompting.py  prompts.py  types.py  utils.py  verification.py
src/math_agent/backends/: __init__.py  anthropic.py  anthropic_backend.py  base.py  cohere.py  cohere_backend.py  deepseek.py  gemini.py  gemini_backend.py  openai.py  openai_backend.py  openrouter.py  registry.py
tests/: test_agent.py
